Bug 49966 - Coasting Direction is incorrect for negative VertScrollDelta/HorizScrollDelta
Summary: Coasting Direction is incorrect for negative VertScrollDelta/HorizScrollDelta
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-15 13:03 UTC by Chun Yang
Modified: 2012-05-15 18:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to fix wrong coasting direction (1.73 KB, patch)
2012-05-15 13:11 UTC, Chun Yang
no flags Details | Splinter Review

Description Chun Yang 2012-05-15 13:03:02 UTC
Overview:
Coasting is in the wrong direction for negative VertScrollDelta/HorizScrollDelta.

Steps to Reproduce:
1) Set VertScrollDelta to -25 in xorg.conf (Option "VertScrollDelta" "-25") or via synclient (`synclient VertScrollDelta=-25`).
2) Enable coasting (try CoastingSpeed=20, CoastingFriction=10)
2) Scroll down a long webpage and try to activate coasting

Actual Results:
Scrolling temporarily stops after releasing fingers from touchpad, then scrolls in reverse direction before stopping.

Expected Results:
Scrolling coasts in the same direction as original scroll for a while and eventually slows and stops.

Build Operating System: Linux 3.3.2-1-ARCH x86_64
Build Date: 15 April 2012  09:55:35AM
Comment 1 Chun Yang 2012-05-15 13:11:51 UTC
Created attachment 61691 [details] [review]
Patch to fix wrong coasting direction
Comment 2 Peter Hutterer 2012-05-15 18:48:08 UTC
thanks, pushed.

commit 53557a5cab1e253dc8f4393207954ae0fe76068f
Author: Chun Yang <Chuck.Yang@gmail.com>
Date:   Tue May 15 14:51:42 2012 -0500

    Fix coasting for negative ScrollDelta


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.