Fix coasting for negative ScrollDelta

Fix the coasting direction for when VertScrollDelta or HorizScrollDelta is
negative.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=49966

Regression introduced in 0de4445ff8e75aab208faf6383e76045934c6720

Signed-off-by: Chun Yang <Chuck.Yang@gmail.com>
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>